# musl-fts

./: .gitignore  COPYING  Makefile.am  README  configure.ac  fts.c  meson.build  musl-fts.pc.in
